@@ -20,10 +20,9 @@
         <oracle.jdbc.version>23.3.0.23.09</oracle.jdbc.version>
         <schemacrawler-oracle.version>16.25.3</schemacrawler-oracle.version>
 
-        <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
-    </properties>
+        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version> </properties>
 
     <dependencies>
         <dependency>
@@ -36,6 +35,31 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>linux</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>linux</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>win</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>win</classifier>
+        </dependency>
+
 
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
@@ -99,11 +123,23 @@
             </plugin>
 
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx-maven-plugin.version}</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${exec-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>com.depavlo.ddlschematorfx.MainApp</mainClass>
+                    <mainClass>com.depavlo.ddlschematorfx.MainApp</mainClass> <workingDirectory>${project.build.directory}/classes</workingDirectory> <executable>java</executable> <arguments>
+                    <argument>--module-path</argument>
+                    <argument>${settings.localRepository}/org/openjfx/javafx-controls/${javafx.version}/${javafx-controls-${javafx.version}-${classifier}.jar}:${settings.localRepository}/org/openjfx/javafx-fxml/${javafx.version}/${javafx-fxml-${javafx.version}-${classifier}.jar}</argument>
+                    <argument>--add-modules</argument>
+                    <argument>javafx.controls,javafx.fxml</argument>
+                </arguments>
                 </configuration>
             </plugin>
 
